Aligned the experience table, fixed margins, uploaded more pictures.

--- a/styles.css
+++ b/styles.css
@@ -127,43 +127,84 @@ ul.skills {
   background: #5FAD9E;
 }
 
-
 .experience h2 { padding: 0px;
-                margin: 60px;
+                margin-top: 60px;
+                margin-bottom: 0px;
 }
 
 
-table { 
-    border-spacing: 80px;
+table {
+    border-spacing: 32px;
 }
+
+
  td {
+  max-width: 300px; 
+  padding: ;
     text-align: left;
-    
+    margin-bottom: 24px;
 }
 
 
-.description { position: relative;
+#company {width: 120px;
+          padding-right: 80px}
+
+ .company-image{ 
+                    height: 100px;
+                    width: 100px;
+                    margin: auto; }
+
+.description { color: #637772;
+                 position: relative;
                 /*left: 160px;*/
-                width: 800px;
+                width: 100%;
                 border: 0px solid #73AD21;
                 padding: 24px;
-                text-align: left;
+                text-align: left
+
 
 }
 .article-info {display: inline;
-                padding: 30px;
+                padding: ;
                 /*height: 100%;
                 width: 25%;*/}
-
+.company-div { width: 100px;
+                height: 100px;
+                 }
 
 article {margin-bottom: 64px;}
 
+p {max-width:500px
+
+ }
 
 
+/*
+ td .date {column-width: 500px;
+            text-align: center;}*/
+}
+
+    
+}
+
+.bottom-image{
+                display: block;
+                margin: auto;
+                }
+
+footer .contact{ 
+          display: block;
+          margin: auto;
+          position: relative;
+          text-align: center}
+
+
+}
 footer {
   width: 100%;
   min-height: 30px;
   padding: 20px 0 40px 20px;
+  text-align: center;
 }
 
 footer .copyright {
@@ -180,7 +221,9 @@ footer ul {
 
 footer ul li {
   display: inline-block;
+
 }
+
 
 
 a.social {
